[package]
name = "rs-process-monitor"
version = "0.5.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
sysinfo = "0.37.2"
chrono = "0.4.42"
ratatui = "0.30.0"
crossterm = "0.29.0"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
